--- a/pos_app/templates/analysis_dashboard.html
+++ b/pos_app/templates/analysis_dashboard.html
@@ -79,13 +79,14 @@
             .chart-container {
                 width: 80%; /* Make the chart containers smaller */
                 max-width: 500px; /* Ensure they don't stretch too wide */
-                margin-left: -28%; /* Center the charts */
+                margin-left: -20%; /* Center the charts */
             }
         
             .stats {
                 flex-direction: column; /* Stack the stats vertically */
                 font-size: 1.2em; /* Slightly smaller font size */
-                text-align: center; /* Center the stats */
+                text-align: center; 
+                margin-left: -20%;/* Center the stats */
             }
         
             .stats p {
