removed change code and password option

--- a/pos_app/templates/base.html
+++ b/pos_app/templates/base.html
@@ -97,7 +97,7 @@
             }
             .navbar .navbar-menu .nav-item {
                 position: relative;
-                left: -15px;
+                left: -9px;
             }
             .navbar .navbar-menu.show {
                 display: flex;
@@ -117,7 +117,7 @@
 <body>
     <!-- Navbar -->
     <div class="navbar">
-        <a class="navbar-brand" href="#">POS SYSTEM</a>
+        <a class="navbar-brand" href="/">POS SYSTEM</a>
         <button class="hamburger" id="hamburger">☰</button>
         <div class="navbar-menu" id="nav-menu">
             <div class="nav-item"><a href="{% url 'inventory' %}">Inventory</a></div>
